--- a/src/components/style.css
+++ b/src/components/style.css
@@ -736,12 +736,15 @@ input::-webkit-inner-spin-button {
 }
 
 .settings-grid {
-  margin-top: 70px;
-  min-height: 650px;
+  padding-top: 70px;
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr auto;
   grid-template-rows: auto;
   background-color: #fafafc;
+  @media(max-width:450px){
+    grid-template-columns: 1fr;
+
+  }
 }
 
 .settings {
