working on styles and organizing code

--- a/src/components/pages/pages.module.css
+++ b/src/components/pages/pages.module.css
@@ -1,5 +1,7 @@
-.grid {
+.main {
   min-height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr auto;
   @media (max-width: 450px) {
     min-height: 0;
 
