--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   padding-right: 0px !important;
   overflow: auto !important;
-
 }
 
 code {
@@ -18,7 +17,7 @@ code {
   max-width: 1150px;
   margin: auto;
   padding: 9.6rem;
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .section-wrapper-speciel {
@@ -32,22 +31,23 @@ code {
   margin: auto;
   overflow: hidden;
   padding: 0px 9.6rem;
-
+}
+.recipe-view-wrapper {
+  max-width: 1150px;
+  margin: auto;
+  padding: 2rem 9.6rem;
+  overflow: hidden;
 }
 
 @media (max-width: 768px) {
   .section-wrapper {
     padding: 7.2rem 1.4rem;
     margin: 0px;
-
   }
 }
 @media (max-width: 450px) {
   .recipe {
     padding: 2.2rem 1.4rem;
     margin: 0px;
-
   }
 }
-
-
