--- a/src/components/NavBar/Nav.module.css
+++ b/src/components/NavBar/Nav.module.css
@@ -1,29 +1,37 @@
 .nav {
   display: flex;
   align-items: center;
-  background-color: #161a21;
-  position: sticky;
-  top: 0;
+  background-color: transparent;
+  color: black;
+  /* position: sticky;
+  top: 0; */
   z-index: 100;
   padding: 0 20px;
   margin: 0;
   padding: 0px 9.6rem;
   justify-content: center;
-  @media (max-width:450px){
+  @media (max-width: 450px) {
     justify-content: space-between;
     padding: 0px 1.5rem 0px 0.8rem;
   }
 }
 
-
+.navMain {
+  display: flex;
+  width: 1440px;
+  height: 152px;
+  padding: 0px 120px;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+}
 
 .maxWidth {
   max-width: 100px;
 }
 
 .nav > * {
-  max-width:1150px;
-  ;
+  max-width: 1150px;
 }
 .nav div {
   display: grid;
@@ -35,44 +43,46 @@
   height: 100%;
   width: 100px;
   object-position: left;
-
 }
 
 .logButtonHome {
-  background-color: #191d3a;
-  color: #ffffff;
+  display: flex;
+  width: 60px;
+  height: 44px;
+width: 108px;
+  justify-content: space-around;
+  align-items: center;
+  gap: 8px;
   border: none;
-  text-align: center;
-  cursor: pointer;
-  font-weight: 600;
-  font-family: "Poppins", sans-serif;
-  border-radius: 10px;
-  width: 100%;
-  justify-self: center;
-  height: 100%;
+
+  box-shadow: 0px 0px 0px 0px rgba(23, 23, 23, 0.04),
+    0px 2px 4px 0px rgba(23, 23, 23, 0.04),
+    0px 7px 7px 0px rgba(23, 23, 23, 0.03),
+    0px 15px 9px 0px rgba(23, 23, 23, 0.02),
+    0px 27px 11px 0px rgba(23, 23, 23, 0.01),
+    0px 42px 12px 0px rgba(23, 23, 23, 0);
+  border-radius: 8px;
+  background: var(--Gray--4, #ebebeb);
 }
 
-.logButtonHome {
-  background-color: transparent;
-  width: 100%;
-  height: 100%;
-}
-
-.logButton:hover {
-  transform: translateY(-5px);
-  transition: background;
-  transition: background 0.5s;
-  transition: transform 0.3s;
-}
-
-.rightNav {
-  display: grid;
-  justify-items: right;
-  padding-right: 20px;
-}
-
-.options li a:hover:after {
-  width: 100%;
+.signButtonHome {
+  display: flex;
+  width: 60px;
+  height: 44px;
+  width: 108px;
+  background: var(--Primary, rgba(181, 93, 81, 0.97));
+  color: var(--White, #FFF);
+border: none;
+  justify-content: space-around;
+  align-items: center;
+  gap: 8px;
+  box-shadow: 0px 0px 0px 0px rgba(23, 23, 23, 0.04),
+    0px 2px 4px 0px rgba(23, 23, 23, 0.04),
+    0px 7px 7px 0px rgba(23, 23, 23, 0.03),
+    0px 15px 9px 0px rgba(23, 23, 23, 0.02),
+    0px 27px 11px 0px rgba(23, 23, 23, 0.01),
+    0px 42px 12px 0px rgba(23, 23, 23, 0);
+  border-radius: 8px;
 }
 
 .options li a {
@@ -107,18 +117,25 @@
 }
 
 .options {
-  display: grid;
-  grid-template-columns: repeat(4, 100px);
-  justify-content: left;
-  padding: 0px;
+  display: flex;
+  justify-content: space-evenly;
+  width: 422px;
+  margin: auto;
+  font-size: 18px;
 }
 
 .options li {
   list-style-type: none;
-
   display: grid;
   justify-content: center;
   height: 90px;
+  width: fit-content;
+  color: var(--Black, #000);
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
 .options li a,
@@ -127,12 +144,12 @@
   transition: all 0.5s;
 }
 .options li a:hover {
-  color: #555;
+  color: #000000a3;
 }
 
 .options li a {
   text-decoration: none;
-  color: #b5b9bc;
+  color: #000000;
   align-self: center;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
@@ -151,7 +168,7 @@
   width: 0%;
   content: ".";
   color: transparent;
-  background: #aaa;
+  background: #00000073;
   height: 1px;
 }
 .options li a:hover:after {
@@ -169,7 +186,7 @@
   opacity: 0;
 }
 .options li a:hover {
-  color: #fff;
+  color: #00000086;
   z-index: 1;
 }
 .options li a:hover:after {
