--- a/src/components/Hero/HeroAndInfo.module.css
+++ b/src/components/Hero/HeroAndInfo.module.css
@@ -1,7 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,600;1,9..40,100;1,9..40,600&family=Montserrat:wght@100;400;600&family=Poppins:wght@100;500;600&family=Rubik:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 .welcome {
   background-color: #e2f2f59c;
+}
+
+.hero {
+  margin-top: 208px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.hero img {
+  justify-self: right;
 }
 
 .signupBtn {
@@ -38,10 +49,8 @@
   animation: slide-in-left 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-
-
 .section h1 {
-  display: grid;
+
 
   @media (max-width: 450px) {
     padding-top: 0px;
@@ -49,41 +58,47 @@
 }
 
 .header {
-    font-weight: 800;
-    align-self: start;
-    font-size: 2.5rem;
-    color: #000000;
-    font-family: "Helvetica";
-    width: 600px;
-    padding-bottom: 100px;
-    max-width: 450px;
+  color: var(--Black, #000);
+  font-family: Roboto;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 
-    @media(max-width:450px){
-      font-size: 2rem;
-      max-width: 100vw;
-    }
+  @media (max-width: 450px) {
+    font-size: 2rem;
+    max-width: 100vw;
   }
-
-.smallerText {
-  margin-top: 20px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  max-width: 450px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    @media(max-width:450px){
-      font-size: 1rem;
-      max-width: 60vw;
-    }
 }
 
+.smallerText {
+  color: var(--Gray--2, #878787);
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  margin-top: 25px;
+  @media (max-width: 450px) {
+    font-size: 1rem;
+    max-width: 60vw;
+  }
+}
+
+.span {
+  color: var(--Primary, rgba(181, 93, 81, 0.97));
+  font-family: Roboto;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 .blob {
   position: absolute;
   top: 0px;
   right: 0px;
   z-index: -1000;
 }
-
 
 .welcomeInfo {
   display: grid;
@@ -110,9 +125,8 @@
   height: 100%;
   justify-self: center;
   background-color: #ffffff;
-    overflow: hidden;
+  overflow: hidden;
 }
-
 
 .infoCard:hover .textTag {
   opacity: 1;
@@ -148,9 +162,6 @@
   transition-delay: 0s;
 }
 
-
-
-
 .infoCard h2 {
   padding-left: 20px;
   padding-top: 30px;
@@ -167,7 +178,6 @@
   overflow: hidden;
 }
 
-
 .infoCard {
   height: 320px;
   padding-bottom: 10px;
@@ -175,13 +185,13 @@
 }
 
 @keyframes slide-in-left {
-    0% {
-      transform: translateX(-10px);
-      opacity: 0;
-    }
-  
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
+  0% {
+    transform: translateX(-10px);
+    opacity: 0;
   }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
