--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 .section-wrapper, .section-wrapper-settings {
   max-width: 1150px;
   margin: auto;
-  padding: 120px 9.6rem;
+  /* padding: 120px 9.6rem; */
   overflow: hidden;
 }
 
