--- a/src/components/Trending Recipes/Trending.module.css
+++ b/src/components/Trending Recipes/Trending.module.css
@@ -6,18 +6,28 @@
   row-gap: 40px;
 }
 
+.recipeCard {
+    border: 1px solid #EBEBEB;
+    border-radius: 8px 8px 8px 8px;
+
+
+}
+
 .recipeName {
   font-family: Roboto;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+  height: 52px;
+  margin-bottom: 10px;
+  margin-top: 19px;
 }
 
 .ProductRatingStarFilled {
   color: #b55d51f8;
   font-family: FontAwesome;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -25,7 +35,7 @@
 .ProductRatingStarFilledTwo {
   color: #a5a5a5;
   font-family: FontAwesome;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -41,4 +51,5 @@
 .recipeInfo {
   margin-left: 16px;
   margin-right: 16px;
+  margin-bottom: 16px;
 }
