--- a/src/components/Popular/Popular.module.css
+++ b/src/components/Popular/Popular.module.css
@@ -1,5 +1,5 @@
 .popularSection {
-    margin-top: 72px;
+  margin-top: 72px;
 }
 
 .recipesContainer {
@@ -12,6 +12,9 @@
   row-gap: 80px;
   width: 100%;
   padding-top: 72px;
+  @media (max-width: 1200px) {
+    column-gap: 40px;
+  }
 }
 
 .categorie img {
