--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,11 @@ code {
     margin: 0px;
   }
 }
+
+
+@media (max-width: 1200px){
+  .section-wrapper {
+    padding: 1.2rem 1.4rem;
+    margin: 0px;
+  }
+}
