--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,10 @@ code {
     padding: 2.2rem 1.4rem;
     margin: 0px;
   }
+  .section-wrapper {
+    padding: 1.2rem 1.4rem;
+    margin: 0px;
+  }
 }
 
 
