--- a/src/components/Hero/HeroAndInfo.module.css
+++ b/src/components/Hero/HeroAndInfo.module.css
@@ -10,16 +10,22 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 28px;
+  @media (max-width: 450px) {
+    grid-template-columns: 1fr;
+    margin-top: 72px;
+
+  }
 }
 
-.rightHero  {
+.rightHero {
   display: grid;
 }
 .rightHero img {
   justify-self: right;
+  @media (max-width: 450px) {
+    display: none;
+  }
 }
-
-
 
 .signupBtn {
   width: 130px;
@@ -70,8 +76,12 @@
   line-height: normal;
 
   @media (max-width: 450px) {
-    font-size: 2rem;
-    max-width: 100vw;
+    font-family: Roboto;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 44px;
+    letter-spacing: 0em;
+    text-align: center;
   }
 }
 
@@ -84,26 +94,52 @@
   line-height: 32px;
   margin-top: 25px;
   @media (max-width: 450px) {
-    font-size: 1rem;
-    max-width: 60vw;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: center;
   }
 }
 
-.span {
-  color: var(--Primary, rgba(181, 93, 81, 0.97));
-  font-family: Roboto;
-  font-size: 64px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-.blob {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  z-index: -1000;
+.buttons {
+  @media (max-width: 450px) {
+    display: flex;
+    justify-content: center; 
+    gap: 12px;
+  }
 }
 
+.logButtonHome {
+  margin-top: 25px;
+  display: flex;
+  width: 176px;
+  height: 54px;
+  font-size: 18px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 26px;
+  color: var(--Black, #000000);
+  border: none;
+  justify-content: space-around;
+  align-items: center;
+  gap: 8px;
+  box-shadow: 0px 0px 0px 0px rgba(23, 23, 23, 0.04),
+    0px 2px 4px 0px rgba(23, 23, 23, 0.04),
+    0px 7px 7px 0px rgba(23, 23, 23, 0.03),
+    0px 15px 9px 0px rgba(23, 23, 23, 0.02),
+    0px 27px 11px 0px rgba(23, 23, 23, 0.01),
+    0px 42px 12px 0px rgba(23, 23, 23, 0);
+  border-radius: 8px;
+  background: var(--Gray--4, #ebebeb);
+
+  @media (max-width: 450px) {
+    width: 108px;
+  }
+}
 .signButtonHome {
   margin-top: 25px;
   display: flex;
@@ -128,6 +164,32 @@
     0px 27px 11px 0px rgba(23, 23, 23, 0.01),
     0px 42px 12px 0px rgba(23, 23, 23, 0);
   border-radius: 8px;
+  @media (max-width: 450px) {
+    width: 108px;
+  }
+}
+
+.span {
+  color: var(--Primary, rgba(181, 93, 81, 0.97));
+  font-family: Roboto;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 44px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+}
+.blob {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: -1000;
 }
 
 .undertext {
@@ -138,12 +200,14 @@
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+  @media (max-width: 450px) {
+    display: none;
+  }
 }
 
 .undertext span {
   color: var(--Primary, rgba(181, 93, 81, 0.97));
   cursor: pointer;
-
 }
 
 .welcomeInfo {
