--- a/src/components/Share/Share.module.css
+++ b/src/components/Share/Share.module.css
@@ -2,11 +2,15 @@
   display: flex;
   align-content: space-around;
   margin-top: 150px;
-  height: 632px;
-  justify-content:center;
+  height: min-content;
+  justify-content: center;
   align-items: center;
   margin-top: 77px;
-
+  margin-bottom: 77px;
+  @media (max-width: 450px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .share img {
@@ -14,19 +18,23 @@
   height: 406px;
   flex-shrink: 0;
   border-radius: 8px 0px 0px 8px;
+  @media (max-width: 450px) {
+    width: 100%;
+    object-fit: cover;
+  }
 }
 
 .share div {
-    height: fit-content;
+  height: fit-content;
   display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   width: 804px;
-
 }
 
 .header {
+  margin-top: 20px;
   color: var(--Black, #000);
   text-align: center;
   font-family: Roboto;
@@ -34,6 +42,14 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
 }
 
 .addtionalInfo {
@@ -45,6 +61,15 @@
   font-weight: 400;
   line-height: 32px;
   margin: 40px;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: center;
+    width: 318px;
+  }
 }
 
 .accent {
@@ -54,6 +79,14 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
 }
 
 .createRecipeButton {
