--- a/src/components/Trending Recipes/Trending.module.css
+++ b/src/components/Trending Recipes/Trending.module.css
@@ -3,14 +3,16 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 32px;
-  row-gap: 40px;
+  row-gap: 24px;
+  @media (max-width: 450px) {
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 20px;
+  }
 }
 
 .recipeCard {
-    border: 1px solid #EBEBEB;
-    border-radius: 8px 8px 8px 8px;
-
-
+  border: 1px solid #ebebeb;
+  border-radius: 8px 8px 8px 8px;
 }
 
 .recipeName {
@@ -22,6 +24,14 @@
   height: 52px;
   margin-bottom: 10px;
   margin-top: 19px;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
 }
 
 .ProductRatingStarFilled {
