--- a/src/components/Explore/Explore.module.css
+++ b/src/components/Explore/Explore.module.css
@@ -4,6 +4,10 @@
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 32px;
     row-gap: 40px;
+    @media (max-width: 450px) {
+      grid-template-columns: 1fr 1fr;
+      margin-bottom: 72px;
+    }
   }
   
   .recipeCard {
@@ -22,6 +26,14 @@
     height: 52px;
     margin-bottom: 10px;
     margin-top: 19px;
+    @media (max-width: 450px) {
+      font-family: Roboto;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 24px;
+      letter-spacing: 0em;
+      text-align: left;
+    }
   }
   
   .ProductRatingStarFilled {
