--- a/src/components/Newsletter/Newsletter.module.css
+++ b/src/components/Newsletter/Newsletter.module.css
@@ -14,6 +14,16 @@
   letter-spacing: 0em;
   text-align: center;
   padding-top: 49px;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin-top: 74px;
+    width: 300px;
+  }
 }
 
 .newsletter {
@@ -26,10 +36,27 @@
   color: #878787;
   max-width: 790px;
   padding: 44px 0px;
+  @media (max-width: 450px) {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0em;
+    text-align: center;
+    width: 300px;
+    padding-top: 16px;
+  }
 }
 
 .inputContainer {
   padding-bottom: 49px;
+  @media (max-width: 450px) {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    
+    
+  }
 }
 
 .newsletterButton {
@@ -53,6 +80,9 @@
     0px 27px 11px 0px rgba(23, 23, 23, 0.01),
     0px 42px 12px 0px rgba(23, 23, 23, 0);
   border-radius: 8px;
+  @media (max-width: 450px) {
+    width: 308px;
+  }
 }
 
 .inputContainer input {
@@ -63,4 +93,10 @@
   gap: 10px;
   margin-right: 24px;
   color: #a5a5a5;
+  @media (max-width: 450px) {
+    max-width: 276px;
+    margin-bottom: 16px;
+    margin-right: 16px;
+
+  }
 }
