--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 40px;
+  margin-top: 100px;
   margin-bottom: 72px;
+  @media (max-width: 450px) {
+    margin-top: 40px;
+    margin-bottom: 72px;
+  }
 }
 
 .header {
