--- a/src/components/NavBar/Nav.module.css
+++ b/src/components/NavBar/Nav.module.css
@@ -11,7 +11,9 @@
   justify-content: center;
   @media (max-width: 1200px) {
     justify-content: space-between;
-    padding: 0px 1.5rem 0px 0.8rem;
+
+    padding: 1.2rem 1.4rem;
+    margin: 0px;
   }
 }
 
@@ -198,7 +200,7 @@
   @media (max-width: 1200px) {
     display: flex;
     justify-content: space-between;
-    padding: 1.2rem 0rem;
+
     width: 100%;
   }
 }
