--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -3,39 +3,43 @@ body {
   height: 100vh;
   width: 100vw; */
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .loaderContainer {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+flex-direction: column;
+justify-content: center;
 }
 
 .header {
   position: relative;
   margin: 0 auto;
   top: 25vh;
-  /* width: 100vw; */
+  width: 100vw;
   text-align: center;
   font-family: Roboto;
-  font-size: 22px;
-  color: #333;
+  font-size: 18px;
+  color: #b76054;
   opacity: 0.75;
-  animation: pulse 2.5s linear infinite;
 }
 
 #cooking {
   position: relative;
   margin: 0 auto;
   top: 0;
-  width: 55vh;
-  height: 55vh;
+  width: 45vh;
+  height: 45vh;
   overflow: hidden;
+  
+
 }
 #cooking .bubble {
   position: absolute;
   border-radius: 100%;
-  box-shadow: 0 0 0.25vh #4d4d4d;
+  box-shadow: 0 0 0.25vh #b76054;
   opacity: 0;
 }
 #cooking .bubble:nth-child(1) {
@@ -43,7 +47,7 @@ body {
   left: 58%;
   width: 2.5vh;
   height: 2.5vh;
-  background-color: #454545;
+  background-color: #b76054;
   animation: bubble 2s cubic-bezier(0.53, 0.16, 0.39, 0.96) infinite;
 }
 #cooking .bubble:nth-child(2) {
@@ -51,7 +55,7 @@ body {
   left: 52%;
   width: 2vh;
   height: 2vh;
-  background-color: #3d3d3d;
+  background-color: #b76054;
   animation: bubble 2s ease-in-out 0.35s infinite;
 }
 #cooking .bubble:nth-child(3) {
@@ -59,7 +63,7 @@ body {
   left: 50%;
   width: 1.5vh;
   height: 1.5vh;
-  background-color: #333;
+  background-color: #b76054;
   animation: bubble 1.5s cubic-bezier(0.53, 0.16, 0.39, 0.96) 0.55s infinite;
 }
 #cooking .bubble:nth-child(4) {
@@ -67,7 +71,7 @@ body {
   left: 56%;
   width: 1.2vh;
   height: 1.2vh;
-  background-color: #2b2b2b;
+  background-color: #b76054;
   animation: bubble 1.8s cubic-bezier(0.53, 0.16, 0.39, 0.96) 0.9s infinite;
 }
 #cooking .bubble:nth-child(5) {
@@ -75,7 +79,7 @@ body {
   left: 63%;
   width: 1.1vh;
   height: 1.1vh;
-  background-color: #242424;
+  background-color: #b76054;
   animation: bubble 1.6s ease-in-out 1s infinite;
 }
 #cooking #area {
@@ -102,7 +106,7 @@ body {
   width: 35%;
   height: 20%;
   background-color: transparent;
-  border-top: 1vh solid #333;
+  border-top: 1vh solid #b76054;
   border-left: 1vh solid transparent;
   border-radius: 100%;
   transform: rotate(20deg) rotateX(0deg) scale(1.3, 0.9);
@@ -113,7 +117,7 @@ body {
   right: 30%;
   width: 50%;
   height: 8%;
-  background-color: #333;
+  background-color: #b76054;
   border-radius: 0 0 1.4em 1.4em;
   transform-origin: -15% 0;
 }
@@ -131,7 +135,7 @@ body {
   right: 37%;
   width: 40%;
   height: 45%;
-  background-color: #333;
+  background-color: #b76054;
   box-shadow: 0 0 3px 0 #333;
   border-radius: 100%;
   transform-origin: -20% 0;
