--- a/src/components/Hero/HeroAndInfo.module.css
+++ b/src/components/Hero/HeroAndInfo.module.css
@@ -112,8 +112,10 @@
 
 .leftHero {
   @media (max-width: 450px) {
-    display: grid;
+    display: flex;
     justify-content: center;
+    gap: 10px;
+  
   }
 }
 
