--- a/src/components/SortBy/SortBy.module.css
+++ b/src/components/SortBy/SortBy.module.css
@@ -2,9 +2,78 @@
   display: flex;
   gap: 24px;
   align-items: center;
+
 }
 
-.sortByHeader h6 {
+.mainContainer {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  position: relative;
+}
+
+.display {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+.sortTitle {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+.selector {
+  border: solid 1px #878787;
+  width: 172px;
+  height: 26px;
+  padding: 16px 24px 16px 24px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: url("../icons/downArrow.png");
+
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 24px);
+  background-position-y: center;
+  padding-right: 20px;
+  padding-right: 20px;
+
+  @media (max-width: 450px) {
+    max-width: 7rem;
+  }
+}
+
+.optionsContainer {
+  border: solid 1px #878787;
+  width: 172px;
+  height: fit-content;
+  padding: 20px 20px 0px 20px;
+  border-radius: 8px;
+  display: grid;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+  position: absolute;
+  top: 120%;
+  left: 0;
+  background-color: #ffffff;
+  z-index: 100;
+  @media (max-width: 450px) {
+    max-width: 7rem;
+  }
+}
+
+.inputSort {
   font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
@@ -13,41 +82,10 @@
   text-align: left;
 }
 
-.selector {
-    border: solid 1px #878787;
-    width: 172px;
-    height: 26px;
-    padding: 16px 24px 16px 24px;
-    border-radius: 8px;
-
+.inputSort {
+  visibility: hidden;
+  margin-bottom: 20px;
 }
-
-.optionsContainer {
-    border: solid 1px #878787;
-    width: 172px;
-    height: fit-content;
-    padding: 16px 24px 16px 24px;
-    border-radius: 8px;
-    display: grid;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    letter-spacing: 0em;
-    text-align: left;
-    position: relative;
-    top: 10px;
-    right: -20px;
-    
-    
-}
-
-.selector input {
-font-family: Roboto;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0em;
-text-align: left;
-
+label {
+  cursor: pointer;
 }
