--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -64,7 +64,7 @@
   font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 1rem;
   letter-spacing: 0em;
   text-align: left;
   @media (max-width: 450px) {
