finished working on sortBy functionality

--- a/src/components/SortBy/SortBy.module.css
+++ b/src/components/SortBy/SortBy.module.css
@@ -19,9 +19,8 @@
 }
 .sortTitle {
   font-family: Roboto;
-
+  font-size: 16px;
   font-weight: 400;
-
   letter-spacing: 0em;
   text-align: left;
 
@@ -54,7 +53,7 @@
   border: solid 1px #878787;
   width: 172px;
 
-  padding: 20px 20px 20px 24px;
+  padding: 20px 20px 0px 20px;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
