--- a/src/components/NewRecipe/NewRecipe.module.css
+++ b/src/components/NewRecipe/NewRecipe.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin-bottom: 230px;
 }
 
 .form {
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: left;
+  width: 800px;
 }
 
 .formLabel {
@@ -145,4 +146,107 @@
 
 .addMargin {
   margin-top: 45px;
+}
+
+.sortByHeader {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+
+.mainContainer {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  position: relative;
+}
+
+.display {
+  display: flex;
+  column-gap: 24px;
+  align-items: center;
+}
+.sortTitle {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0em;
+  text-align: left;
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+}
+
+.selector {
+  border: solid 1px #878787;
+  width: 172px;
+  height: 26px;
+  padding: 16px 24px 16px 24px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-image: url("../icons/downArrow.png");
+
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 24px);
+  background-position-y: center;
+  padding-right: 20px;
+  padding-right: 20px;
+  color: #a5a5a5;
+  @media (max-width: 450px) {
+    max-width: 7rem;
+  }
+}
+
+.optionsContainer {
+  border: solid 1px #878787;
+  width: 172px;
+  padding: 20px 20px 0px 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-family: Roboto;
+  font-weight: 400;
+  text-align: left;
+  position: absolute;
+  top: 140%;
+  left: 0;
+  background-color: #ffffff;
+  z-index: 10000;
+  @media (max-width: 450px) {
+    max-width: 7rem;
+  }
+}
+
+.inputSort {
+  font-family: Roboto;
+  font-weight: 400;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.inputSort {
+  visibility: hidden;
+  padding: 8px 16px 8px 16px;
+}
+
+.label {
+  cursor: pointer;
+  height: 40px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #a5a5a5;
+}
+
+.label:hover {
+  background-color: #f5f5f5;
+}
+
+.correctMargin {
+  margin-bottom: 30px;
 }
