--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -1,16 +1,115 @@
 .headerContainer {
-    margin-top: 72px;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+  margin-top: 72px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
- 
- .header {
-    font-family: Roboto;
-    font-size: 40px;
-    font-weight: 500;
-    line-height: 44px;
-    letter-spacing: 0em;
-    text-align: left;
-    
- }
+
+.header {
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 44px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.recipeContainer {
+  display: grid;
+  grid-template-columns: 3fr 1.5fr;
+  margin-top: 55px;
+  margin-bottom: 24px;
+}
+
+.infoContainer {
+  display: flex;
+  gap: 19px;
+  margin-right: 75px;
+}
+
+.rightContainerBox {
+  display: flex;
+  gap: 9px;
+  align-items: center;
+  margin-left: 75px;
+}
+
+.infoContainerBox {
+  display: flex;
+  gap: 9px;
+  align-items: center;
+}
+
+.hr {
+  color: #ebebeb52;
+}
+
+.recipeImg {
+  width: 100%;
+}
+
+.recipeImg {
+  max-height: 504px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 7px;
+}
+
+.timesServingsContainer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  gap: 54px;
+  margin-top: 46px;
+}
+
+.timeBoxes {
+  display: grid;
+  justify-items: center;
+  row-gap: 10px;
+}
+
+.timeBoxes h6 {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #878787;
+}
+
+.timeBoxes span {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.printButton {
+  background: none;
+  color: inherit;
+  border: solid 1px #b55d51f8;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  width: 135px;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.printButton label {
+  margin-left: 9px;
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #b55d51f8;
+}
