--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -113,3 +113,83 @@
   text-align: left;
   color: #b55d51f8;
 }
+
+.description {
+  margin-top: 46px;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.servingsRv {
+  display: grid;
+  display: flex;
+  column-gap: 5px;
+  height: 20px;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.servingsButton {
+  width: 30px;
+  height: 30px;
+  color: #b55d51f8;
+  background-color: transparent;
+  border: 0.5px solid #87878776;
+  border-radius: 50%;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.servingsButton:hover {
+  background-color: #87878718;
+}
+
+.ingredientsTitleContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.numberServingsRc {
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #878787;
+}
+
+.ingredientsTitle {
+  font-family: Roboto;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 38px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.ingredientList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 17px;
+}
+
+.ingredientList li {
+  display: flex;
+  align-items: center;
+  gap: 17px;
+  justify-items: center;
+}
+
+.SingleIngredient {
+  margin-bottom: 17px;
+}
