--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -183,13 +183,86 @@
   margin-top: 17px;
 }
 
-.ingredientList li {
-  display: flex;
+.ingredientList li,
+.instructionList li {
+  display: grid;
   align-items: center;
+  grid-template-columns: auto 1fr;
   gap: 17px;
-  justify-items: center;
+  justify-items: left;
 }
 
 .SingleIngredient {
   margin-bottom: 17px;
+}
+
+.boxWithNumber {
+  width: 24px;
+  height: 24px;
+  background-color: #b55d51;
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+}
+
+.instructionList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 17px;
+}
+
+.SingleInstruction {
+  margin-bottom: 29px;
+}
+
+.commentHr {
+  color: #b55d51;
+  height: 6px;
+  background-color: #b55d51;
+  margin-top: 222px;
+}
+
+.rateRecipeTitle {
+  font-family: Roboto;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 40px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.commentInput {
+  width: 100%;
+  height: 146px;
+  resize: none;
+  overflow-y: auto;
+  padding: 10px;
+  box-sizing: border-box;
+  font-family: Roboto;
+  padding: 16px;
+  margin-top: 16px;
+  background-color: #f5f5f5;
+  border: none;
+}
+
+
+.postButtonContainer {
+  display: flex;
+  justify-content: right;
+}
+
+
+.headerForOtherRecipes {
+  font-family: Roboto;
+  font-weight: 400;
+  line-height: 36px;
+  margin-top: 49px;
+  font-size: 40px;
+  font-weight: 500;
+  
+}
+
+.otherContainer {
+  margin-top: 73px;
 }
