--- a/src/components/Newsletter/Newsletter.module.css
+++ b/src/components/Newsletter/Newsletter.module.css
@@ -26,6 +26,33 @@
   }
 }
 
+.titleSmall {
+  /* Stay connected with our Recipes updates */
+
+width: 272px;
+height: 52px;
+
+/* Heading/H5 - medium */
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 24px;
+line-height: 26px;
+/* or 108% */
+text-align: center;
+
+/* Black */
+color: #000000;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+padding: 53px 32px 32px 32px
+}
+
 .newsletter {
   font-family: Roboto;
   font-size: 32px;
