--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -295,7 +295,8 @@ margin-bottom: 32px;
 }
 
 .rightRecipeDetails {
-  margin-left: 75px;
+  margin-left: 30px;
+  width: 310px;
 }
 
 .trendLateral {
