finished related design

--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -299,6 +299,10 @@ margin-bottom: 32px;
   width: 310px;
 }
 
-.trendLateral {
+.trendLateral, .recentLateral {
   margin-bottom: 72px;
+}
+
+.recentLateral {
+margin-top: 72px;
 }
