--- a/src/components/NewRecipe/NewRecipe.module.css
+++ b/src/components/NewRecipe/NewRecipe.module.css
@@ -40,7 +40,7 @@
   line-height: 26px;
   letter-spacing: 0em;
   text-align: left;
-  width: auto%;
+  width: auto;
   word-break: break-word;
   color: #a5a5a5;
 
@@ -290,14 +290,56 @@
   /* right: -93%; */
   left: 95%;
 
-
   @media (max-width: 500px) {
     left: 90%;
     top: -2%;
-
   }
 }
 
 .trashIcon {
   cursor: pointer;
+}
+
+.tagButton {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px;
+  gap: 16px;
+  border: solid 1px #a5a5a5;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+  width: max-content;
+  word-break: break-word;
+  color: #a5a5a5;
+  margin-bottom: 8px;
+  margin-right: 8px;
+  @media (max-width: 630px) {
+    max-width: 100%;
+  }
+}
+
+.tagButton:hover {
+  background-color: #a5a5a524;
+  color: #b55d51;
+
+}
+
+.activeTag {
+  background-color: #a5a5a524;
+  color: #b55d51;
+}
+
+.tagsContainer {
+  display: inline-block;
 }
