--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -3,6 +3,9 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  @media (max-width: 850px) {
+    margin-top: 0px;
+  }
 }
 
 .header {
@@ -12,15 +15,23 @@
   line-height: 44px;
   letter-spacing: 0em;
   text-align: left;
+  @media (max-width: 850px) {
+    font-family: "Roboto";
+    font-size: 20px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+  }
 }
 
 .recipeContainer {
   display: grid;
   grid-template-columns: 3fr 1.5fr;
-  margin-top: 55px;
-  margin-bottom: 24px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   @media (max-width: 450px) {
-    grid-template-columns: 1fr;
+    display: flex;
   }
 }
 
@@ -37,7 +48,8 @@
   display: flex;
   gap: 19px;
   @media (max-width: 450px) {
-    grid-template-columns: 1fr;
+    display: grid;
+    font-size: 14px;
   }
 }
 
@@ -46,10 +58,6 @@
   gap: 9px;
   align-items: center;
   margin-left: 75px;
-  @media (max-width: 450px) {
-    margin-left: 0px;
-    margin-top: 20px;
-  }
 }
 
 .infoContainerBox {
@@ -81,14 +89,21 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  gap: 54px;
-  margin-top: 46px;
+  gap: 4rem;
+  margin-top: 3rem;
+  @media (max-width: 450px) {
+    gap: 2rem;
+    margin-top: 1rem;
+  }
 }
 
 .timeBoxes {
   display: grid;
   justify-items: center;
   row-gap: 10px;
+  @media (max-width: 450px) {
+    row-gap: 10px;
+  }
 }
 
 .timeBoxes h6 {
@@ -99,6 +114,9 @@
   letter-spacing: 0em;
   text-align: center;
   color: #878787;
+  @media (max-width: 450px) {
+    font-size: 16px;
+  }
 }
 
 .timeBoxes span {
@@ -108,6 +126,9 @@
   line-height: 21px;
   letter-spacing: 0em;
   text-align: center;
+  @media (max-width: 450px) {
+    font-size: 16px;
+  }
 }
 
 .printButton {
@@ -135,7 +156,6 @@
     padding-right: 0px;
     border: none;
   }
-
 }
 .printButton label {
   margin-left: 9px;
@@ -149,13 +169,16 @@
 }
 
 .description {
-  margin-top: 46px;
+  margin-top: 4rem;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
   letter-spacing: 0em;
   text-align: left;
+  @media (max-width: 450px) {
+    margin-top: 2rem;
+  }
 }
 
 .servingsRv {
@@ -188,7 +211,10 @@
 .ingredientsTitleContainer {
   display: flex;
   justify-content: space-between;
-  margin-top: 40px;
+  margin-top: 3rem;
+  @media (max-width: 450px) {
+    margin-top: 2rem;
+  }
 }
 
 .numberServingsRc {
@@ -201,7 +227,7 @@
   color: #878787;
 
   @media (max-width: 450px) {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -258,7 +284,10 @@
   color: #b55d51;
   height: 6px;
   background-color: #b55d51;
-  margin-top: 222px;
+  margin-top: 16rem;
+  @media (max-width: 450px) {
+    margin-top: 8rem;
+  }
 }
 
 .rateRecipeTitle {
@@ -296,6 +325,8 @@
   margin-top: 49px;
   font-size: 40px;
   font-weight: 500;
+  @media (max-width: 450px) {
+    font-size: 26px;  }
 }
 
 .otherContainer {
@@ -335,6 +366,9 @@
 .trendLateral,
 .recentLateral {
   margin-bottom: 72px;
+  @media (max-width: 450px) {
+    display: none;
+  }
 }
 
 .recentLateral {
