--- a/src/components/Trending Recipes/Trending.module.css
+++ b/src/components/Trending Recipes/Trending.module.css
@@ -79,6 +79,10 @@
   width: 100%;
   object-fit: cover;
   border-radius: 8px 8px 0px 0px;
+  @media (max-width: 450px) {
+    height: 83px;
+    width: 100%;
+  }
 }
 
 .recipeImgLateral {
