--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -1,5 +1,4 @@
 .headerContainer {
-  margin-top: 72px;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -25,12 +24,22 @@
   }
 }
 
+.recipeMainBody {
+  display: grid;
+  grid-template-columns: 3fr 1.5fr;
+
+  @media (max-width: 850px) {
+    display: block;
+  }
+}
+
 .recipeContainer {
   display: grid;
   grid-template-columns: 3fr 1.5fr;
   margin-top: 2rem;
   margin-bottom: 1rem;
-  @media (max-width: 450px) {
+
+  @media (max-width: 850px) {
     display: flex;
   }
 }
@@ -40,14 +49,14 @@
   grid-template-columns: 3fr 1.5fr;
   margin-top: 55px;
   margin-bottom: 24px;
-  @media (max-width: 450px) {
+  @media (max-width: 850px){
     display: block;
   }
 }
 .infoContainer {
   display: flex;
   gap: 19px;
-  @media (max-width: 450px) {
+  @media (max-width: 850px) {
     display: grid;
     font-size: 14px;
   }
@@ -57,7 +66,6 @@
   display: flex;
   gap: 9px;
   align-items: center;
-  margin-left: 75px;
 }
 
 .infoContainerBox {
@@ -79,6 +87,8 @@
   width: 100%;
   object-fit: cover;
   border-radius: 7px;
+  margin-top: 1.5rem;
+
   @media (max-width: 450px) {
     max-height: 276px;
     width: 100%;
@@ -144,7 +154,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  @media (max-width: 450px) {
+  @media (max-width: 650px) {
     display: none;
   }
 }
@@ -152,9 +162,11 @@
 .ingredientInstructions {
   padding-right: 70px;
   border-right: solid 1px #ebebeb;
-  @media (max-width: 450px) {
+  @media (max-width: 850px) {
     padding-right: 0px;
     border: none;
+    padding-right: 0px;
+
   }
 }
 .printButton label {
@@ -284,7 +296,7 @@
   color: #b55d51;
   height: 6px;
   background-color: #b55d51;
-  margin-top: 16rem;
+  margin-top: 10rem;
   @media (max-width: 450px) {
     margin-top: 8rem;
   }
@@ -326,7 +338,8 @@
   font-size: 40px;
   font-weight: 500;
   @media (max-width: 450px) {
-    font-size: 26px;  }
+    font-size: 26px;
+  }
 }
 
 .otherContainer {
@@ -334,39 +347,32 @@
 }
 
 .lateralRecipesTrending {
-  /* Recent Recipes */
-
   width: 336px;
   height: 26px;
-
-  /* Heading/H5 - medium */
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 26px;
-  /* identical to box height, or 108% */
-
-  /* Black */
   color: #000000;
-
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
-  margin-bottom: 32px;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .rightRecipeDetails {
   margin-left: 30px;
   width: 310px;
+  @media (max-width: 850px) {
+    margin-left: 0px;
+    width: 100%;
+    margin-top: 6rem;
+  }
 }
 
 .trendLateral,
 .recentLateral {
   margin-bottom: 72px;
-  @media (max-width: 450px) {
+  @media (max-width: 850px) {
     display: none;
   }
 }
