--- a/src/components/Sign And Log/LogSign.module.css
+++ b/src/components/Sign And Log/LogSign.module.css
@@ -118,8 +118,8 @@
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 0.5rem;
-  border: 1px solid #ebebeb;
-  padding: 8px 16px;
+  /* border: 1px solid #ebebeb; */
+  /* padding: 8px 16px; */
   border-radius: 8px;
   width: 100%;
   cursor: pointer;
