--- a/src/components/RecipeDetails/RecipeDetails.module.css
+++ b/src/components/RecipeDetails/RecipeDetails.module.css
@@ -14,6 +14,7 @@
   line-height: 44px;
   letter-spacing: 0em;
   text-align: left;
+  margin-top: 2rem;
   @media (max-width: 850px) {
     font-family: "Roboto";
     font-size: 20px;
@@ -21,6 +22,8 @@
     display: flex;
     align-items: center;
     color: #000000;
+    margin-top: 0rem;
+
   }
 }
 
@@ -49,7 +52,7 @@
   grid-template-columns: 3fr 1.5fr;
   margin-top: 55px;
   margin-bottom: 24px;
-  @media (max-width: 850px){
+  @media (max-width: 850px) {
     display: block;
   }
 }
@@ -166,7 +169,6 @@
     padding-right: 0px;
     border: none;
     padding-right: 0px;
-
   }
 }
 .printButton label {
