--- a/src/components/Popular/Popular.module.css
+++ b/src/components/Popular/Popular.module.css
@@ -17,7 +17,7 @@
 }
 
 .categorie img {
-  width: 199px;
+  width: 100%;
   height: 199px;
   border-radius: 50%;
   object-fit: cover;
@@ -64,9 +64,9 @@
   }
 
   .categorie {
-    width: 159px;
-    height: 159px;
-    align-items: center;
+
+    display: grid;
+    align-content: center;
   }
 
   .categorieTitle {
